it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: default
spec:
  selector:
    app: it-tools

  ports:
  - name: web
    port: 80
    targetPort: web
