it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-ingress
  namespace: default
spec:
  rules:
  - host: it-tools.gorco.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-tools
            port:
              name: web
  - host: it-tools.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-tools
            port:
              name: web
